# SGDB

./: CMakeLists.txt  Makefile  README.md  Teste  Teste.txt  a  allTables.txt  alltables.txt  alunos  copa  inseriritens.c  main.c  makefile.c  professores  readme.txt  search.c  sgbd  sgbd.c  sgbdfunc.c  sgdb.h  talarico  talaricos  teste  teste01.c  testepreencher.c  testepreencheraula.c  voidmostrartabela.c  voidpreencher.c
inc/: sgdb.h
src/: main.c  sgbdfunc.c
tables/: alunos  copa  cops  escolas  estados  paises  profesores  professores  ruas  table0
